	PR c++/93033 - incorrect tree node sharing with array init.

The split_nonconstant_init piece is the only one necessary to fix the
testcase, but it occurred to me that we might as well not split when
-fno-exceptions.

	* typeck2.c (split_nonconstant_init): Unshare non-decl.
	* cp-gimplify.c (cp_gimplify_init_expr): Only split if -fexceptions.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@279871 138bc75d-0d04-0410-961f-82ee72b054a4